Use valueOf factory method.